Add netlify badge
Signed-off-by: Prateek Kumar <prateek@prateekkumar.in>

--- a/www/index.html
+++ b/www/index.html
@@ -9,6 +9,7 @@
       This page contains webassembly and javascript content, please enable
       javascript in your browser.
     </noscript>
+    Coming soon!
     <script src="./bootstrap.js"></script>
   </body>
 </html>
