--- a/www/index.html
+++ b/www/index.html
@@ -73,6 +73,6 @@ p cnf 2 3
       This page contains webassembly and javascript content, please enable
       javascript in your browser.
     </noscript>
-    <script src="./bootstrap.js"></script>
+    <script src="bootstrap.js"></script>
   </body>
 </html>
