--- a/static/index.html
+++ b/static/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>SolHOP Playground</title>
+    <link rel="icon" type="image/png" href="/logo.png" />
+    <link rel="stylesheet" href="css/styles.css" />
   </head>
   <body>
     <nav class="navbar">
@@ -73,6 +75,6 @@ p cnf 2 3
       This page contains webassembly and javascript content, please enable
       javascript in your browser.
     </noscript>
-    <script src="bootstrap.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
