--- a/static/index.html
+++ b/static/index.html
@@ -24,7 +24,7 @@
         <div id="navbarMenu" class="navbar-menu">
           <div class="navbar-end">
             <a class="navbar-item" href="https://github.com/solhop">GitHub</a>
-            <a class="navbar-item" href="https://solhop.org">About</a>
+            <a class="navbar-item" href="https://solhop.netlify.app">About</a>
           </div>
         </div>
       </div>
@@ -36,7 +36,7 @@
           <div class="columns is-8 is-variable">
             <div class="column has-text-left">
               <div>
-                Test out <a href="https://solhop.org/tools/rsat">rsat</a>, a SAT
+                Test out <a href="https://solhop.netlify.app/rsat">rsat</a>, a SAT
                 solver.
               </div>
               <div class="field">
